--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,6 @@
 {
-    "plugins": ["prettier-plugin-svelte"],
-    "semi": true,
-    "singleQuote": true,
-    "trailingComma": "es5"
-  }
+  "plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"],
+  "semi": true,
+  "singleQuote": true,
+  "trailingComma": "es5"
+}
