--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
   },
   "devDependencies": {
+    "@internationalized/date": "^3.8.2",
     "@lucide/svelte": "^0.515.0",
     "@sveltejs/adapter-auto": "^6.0.0",
     "@sveltejs/adapter-static": "^3.0.8",
@@ -20,6 +21,7 @@
     "@sveltejs/vite-plugin-svelte": "^5.0.0",
     "@tailwindcss/vite": "^4.0.0",
     "autoprefixer": "^10.4.21",
+    "bits-ui": "^2.8.0",
     "clsx": "^2.1.1",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
