--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "vite": "^6.2.6"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.6"
+    "@tailwindcss/vite": "^4.1.6",
+    "firebase": "^12.2.1"
   }
 }
