--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.6",
-    "firebase": "^12.2.1"
+    "firebase": "^12.2.1",
+    "fuse.js": "^7.1.0"
   }
 }
